# svgsprite

./: .gitignore  LICENSE  Makefile  README.md  default.nix  flake.nix  setup.cfg
src/svgsprite/: svgsprite.py
