[metadata]
name = svgsprite
version = 0.1.1
author = Sylvain Fankhauser
author_email = sephi@fhtagn.top
description = Regroup your SVG files in a single sprite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sephii/svgsprite
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    svgsprite = svgsprite:svgsprite.main
